# routes/products.js
@@ -10,8 +10,8 @@ router.get('/', function (req, res, next) {
 
 router.get('/all', middlewares.authorization.authorize, products.product.handleGetAllProducts);
 router.get('/my-products', middlewares.authorization.authorize, products.product.handleListMyProducts);
-router.get('/detail/:id', middewares.authorization.authorize, products.product.handleGetProductbyId);
+router.get('/detail/:id', middlewares.authorization.authorize, products.product.handleGetProductbyId);
 
-router.post('/', products.product.handleCreateProduct);
+// router.post('/', products.product.handleCreateProduct);
 
 module.exports = router;
